--- a/examples/rolling.html
+++ b/examples/rolling.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <script src="../node_modules/three/build/three.js"></script>
-    <script src="../node_modules/cannon/build/cannon.js"></script>
+    <script src="../node_modules/three/build/three.min.js"></script>
+    <script src="../node_modules/cannon/build/cannon.min.js"></script>
     <script src="../node_modules/three/examples/js/controls/OrbitControls.js"></script>
     <script src="../node_modules/three/examples/js/libs/stats.min.js"></script>
 
@@ -102,7 +102,7 @@ function init()
     //Walls
 
     var colors = ['#ff0000', '#ffff00', '#00ff00', '#0000ff', '#ff00ff'];
-    for (var i = 0; i < 5; i++) {
+    for (var i = 0; i < 1; i++) {
         var die = new DiceD6({size: 1.5, backColor: colors[i]});
         scene.add(die.getObject());
         dice.push(die);
@@ -123,7 +123,7 @@ function init()
             dice[i].getObject().body.velocity.set(25 + rand, 40 + yRand, 15 + rand);
             dice[i].getObject().body.angularVelocity.set(20 * Math.random() -10, 20 * Math.random() -10, 20 * Math.random() -10);
 
-            diceValues.push({dice: dice[i], value: i + 1});
+            diceValues.push({dice: dice[i], value: 3});
         }
 
         DiceManager.prepareValues(diceValues);
